Set font-size to 16px to avoid zoom on iOS

--- a/static/museums.css
+++ b/static/museums.css
@@ -564,7 +564,7 @@ a.box:active {
 
 .button.is-small {
   border-radius: 2px;
-  font-size: .75rem;
+  font-size: 16px;
 }
 
 .button[disabled] {
@@ -1547,7 +1547,7 @@ span.permanently-closed {
 }
 .is-small.input, .is-small.textarea {
     border-radius: 2px;
-    font-size: .75rem;
+    font-size: 16px;
 }
 .input, .textarea {
     box-shadow: inset 0 .0625em .125em rgba(10,10,10,.05);
